--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/analytics": "^1.5.0",
     "astro": "^5.12.9",
     "autoprefixer": "^10.4.21",
+    "bindery": "^2.3.6",
     "gsap": "^3.13.0",
     "marked": "^16.2.1",
     "postcss": "^8.5.6",
